--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -12,6 +12,7 @@
                 <a class="nav-link " aria-current="page" (click)="goToRegistro()" >Registro</a>
                 <div *ngIf="auth.currentUser">
                     <a *ngIf="auth.currentUser.perfil == 'administrador'" class="nav-link " aria-current="page" (click)="goToUsuarios()" >Usuarios</a>
+                    <a *ngIf="auth.currentUser.perfil == 'administrador'" class="nav-link " aria-current="page" (click)="goToTurnosAdministrador()" >Turnos A</a>
                     <a *ngIf="auth.currentUser.perfil == 'paciente' || auth.currentUser.perfil == 'administrador'  " class="nav-link " aria-current="page" (click)="goToSolicitarTurno()" >Solicitar turno</a>
                     <a *ngIf="auth.currentUser.perfil == 'paciente'" class="nav-link " aria-current="page" (click)="goToTurnosPaciente()" >Mis turnos P</a>
                     <a *ngIf="auth.currentUser.perfil == 'especialista'" class="nav-link " aria-current="page" (click)="goToTurnosEspecialista()" >Mis turnos E</a>
