--- a/src/app/components/turnos/turnosespecialista/turnosespecialista.component.html
+++ b/src/app/components/turnos/turnosespecialista/turnosespecialista.component.html
@@ -45,4 +45,8 @@
             </table>
         </div>
     </div>
+
+    <div class="row">
+        <button type="button" (click)="cargarTurnos()" class="btn btn-primary">Limpiar filtros</button>
+    </div>
 </div>
