--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -7,18 +7,14 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarID">
             <div class="navbar-nav">
-                <!-- <a class="nav-link active" aria-current="page" >Home</a> -->
                 <a class="nav-link " aria-current="page" (click)="goToLogin()" >Login</a>
                 <a class="nav-link " aria-current="page" (click)="goToRegistro()" >Registro</a>
-                <div *ngIf="auth.currentUser">
-                    <a *ngIf="auth.currentUser.perfil == 'administrador'" class="nav-link " aria-current="page" (click)="goToUsuarios()" >Usuarios</a>
-                    <a *ngIf="auth.currentUser.perfil == 'administrador'" class="nav-link " aria-current="page" (click)="goToTurnosAdministrador()" >Turnos A</a>
-                    <a *ngIf="auth.currentUser.perfil == 'paciente' || auth.currentUser.perfil == 'administrador'  " class="nav-link " aria-current="page" (click)="goToSolicitarTurno()" >Solicitar turno</a>
-                    <a *ngIf="auth.currentUser.perfil == 'paciente'" class="nav-link " aria-current="page" (click)="goToTurnosPaciente()" >Mis turnos P</a>
-                    <a *ngIf="auth.currentUser.perfil == 'especialista'" class="nav-link " aria-current="page" (click)="goToTurnosEspecialista()" >Mis turnos E</a>
-                </div>
-                <!-- <a class="nav-link " aria-current="page" (click)="goToSolicitarTurno()" >Solicitar turno</a> -->
-                <a class="nav-link " aria-current="page" (click)="goToMiPerfil()" >Mi Perfil</a>
+                <a *ngIf="auth.currentUser.perfil == 'administrador'" class="nav-link " aria-current="page" (click)="goToUsuarios()" >Usuarios</a>
+                <a *ngIf="auth.currentUser.perfil == 'administrador'" class="nav-link " aria-current="page" (click)="goToTurnosAdministrador()" >Turnos A</a>
+                <a *ngIf="auth.currentUser.perfil == 'paciente' || auth.currentUser.perfil == 'administrador'  " class="nav-link " aria-current="page" (click)="goToSolicitarTurno()" >Solicitar turno</a>
+                <a *ngIf="auth.currentUser.perfil == 'paciente'" class="nav-link " aria-current="page" (click)="goToTurnosPaciente()" >Mis turnos P</a>
+                <a *ngIf="auth.currentUser.perfil == 'especialista'" class="nav-link " aria-current="page" (click)="goToTurnosEspecialista()" >Mis turnos E</a>
+                <a *ngIf="auth.currentUser" class="nav-link " aria-current="page" (click)="goToMiPerfil()" >Mi Perfil</a>
 
             </div>
             <label *ngIf="auth.currentUser" align="right" for="" style="color: white;">{{auth.currentUser.mail}}</label>
