--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -2,15 +2,15 @@
 
     <div class="row mb-4 mt-2" style="justify-content: center;" align="center">
         <div class="col">
-            <button class="bttn-jelly bttn-md bttn-primary" (click)="cambiarValor('paciente')">Registrar paciente</button>
+            <img src="../../../assets/paciente22.jpg" (click)="cambiarValor('paciente')" style="width: 100px; height: 100px; border-radius: 10%;" alt="paciente" title="paciente">
         </div>
         
         <div class="col">
-            <button class="bttn-jelly bttn-md bttn-primary" (click)="cambiarValor('especialista')">Registrar especialista</button>        
+            <img src="../../../assets/medicoclinica.jpg" (click)="cambiarValor('especialista')"  style="width: 100px; height: 100px; border-radius: 10%;" alt="especialista" title="especialista">
         </div>
     </div>
 
-    <div class="row mb-4">
+    <div class="row mb-4" *ngIf="tipoRegistro">
         <app-registro [tipoUsuario]="tipoRegistro" ></app-registro>
     </div>
     
