hecho para cargar la historia clinica

--- a/src/app/components/turnos/turnosespecialista/turnosespecialista.component.html
+++ b/src/app/components/turnos/turnosespecialista/turnosespecialista.component.html
@@ -46,6 +46,7 @@
         </div>
     </div>
 
+    <!-- <button (click)="completarHistoriaClinica()">FinalizarTurno</button> -->
     <div class="row">
         <button type="button" (click)="cargarTurnos()" class="btn btn-primary">Limpiar filtros</button>
     </div>
