--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -14,6 +14,7 @@
                 <a class="nav-link " aria-current="page" (click)="goToSolicitarTurno()" >Solicitar turno</a>
                 <a *ngIf="auth.currentUser.perfil == 'paciente'" class="nav-link " aria-current="page" (click)="goToTurnosPaciente()" >Mis turnos P</a>
                 <a *ngIf="auth.currentUser.perfil == 'especialista'" class="nav-link " aria-current="page" (click)="goToTurnosEspecialista()" >Mis turnos E</a>
+                <a *ngIf="auth.currentUser.perfil == 'especialista'" class="nav-link " aria-current="page" (click)="goToPacientes()" >Pacientes</a>
                 <a *ngIf="auth.currentUser" class="nav-link " aria-current="page" (click)="goToMiPerfil()" >Mi Perfil</a>
 
             </div>
