agregadas transiciones las paginas de bienvenida y mi perfil

--- a/src/app/pages/miperfil/miperfil.component.html
+++ b/src/app/pages/miperfil/miperfil.component.html
@@ -1,4 +1,4 @@
-<div class="container mt-5" style="max-width: 520px;">
+<div class="container mt-5 roll-in-left" style="max-width: 520px;">
 
     <div class="miContenedor p-3 mb-5" style="padding: 50px">
 
