--- a/src/app/pages/seccionpacientes/seccionpacientes.component.html
+++ b/src/app/pages/seccionpacientes/seccionpacientes.component.html
@@ -1,5 +1,4 @@
-<p>seccionpacientes works!</p>
-<button (click)="traerMISPacientes()">TRAER MIS PACIENTE</button>
+<!-- <button (click)="traerMISPacientes()">TRAER MIS PACIENTE</button> -->
 
 <div class="container">
     <div class="row">
