--- a/src/app/components/turnos/detallesturno/detallesturno.component.html
+++ b/src/app/components/turnos/detallesturno/detallesturno.component.html
@@ -1,6 +1,16 @@
 <div class="container">
 
-    <div class="row"> 
+    <button type="button" (click)="filtrarPorTodo()" class="btn btn-primary">Abrir filtros</button>
+
+    <select (click)="seleccionaF()" class="form-select" id="pepe" aria-label="Default select example">
+        <option value={{item}} *ngFor="let item of objectKeys, let i = index" >{{item}}</option>
+    </select>
+
+    <select (click)="seleccionaTT()" id="mama" class="form-select" aria-label="Default select example">
+        <option *ngFor="let elemento of todosFiltros[jancarlos], let indice = index" value={{indice}} >{{elemento}}</option>
+    </select>
+
+    <!-- <div class="row"> 
         <div class="col-3 m-3">
             <h5>Filtrar por especialista: </h5>
         </div>
@@ -15,7 +25,7 @@
         <div class="col-3 m-3" *ngFor="let item of especialidadesFiltradas">
             <button type="button" (click)="filtrarPorEspecialidad(item)" class="btn btn-primary">{{item}}</button>
         </div>
-    </div>
+    </div> -->
 
     <div class="row" >
         <div class="col">
