--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -45,7 +45,7 @@
 
                                         <!-- BOTONES DE ACCESO RAPIDO -->
                 <div class="col-md-2 d-grid gap-2" *ngFor="let item of usuariosLogin" align="center">
-                        <img (click)="ingresaUsuario(item)" src={{item.data.imagen}} style="width: 50px; height: 50px; border-radius: 10%;" alt="">
+                        <img (click)="ingresaUsuario(item)" src={{item?.data?.imagen}} style="width: 50px; height: 50px; border-radius: 10%;" alt="">
 
                     <!-- <button class="bttn-unite bttn-md bttn-royal" (click)="ingresaAdministrador()" >Administrador</button>
                     <button class="bttn-unite bttn-md bttn-primary" (click)="ingresaEspecialista()" >Especialista</button>
