--- a/src/app/pages/bienvenida/bienvenida.component.html
+++ b/src/app/pages/bienvenida/bienvenida.component.html
@@ -10,7 +10,7 @@
     </div>
 </div> -->
 
-<div class="container py-4 slit-in-diagonal-1" style="max-width: 750px;" >
+<div class="container py-4 slide-in-top" style="max-width: 750px;" >
     <div class="p-5 mb-4 bg-light rounded-3"  id="imgHeader">
       <div class="container-fluid py-5" align="center">
         <h1 class="display-5 fw-bold">Clinica Online</h1>
