--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -1,4 +1,4 @@
-<div class="container" style="max-width: 720px;">
+<div class="container slide-in-top" style="max-width: 720px;">
 
     <div class="row mb-4 mt-2" style="justify-content: center;" align="center">
         <div class="col">
