--- a/src/app/pages/solicitarturno/solicitarturno.component.html
+++ b/src/app/pages/solicitarturno/solicitarturno.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid" align="center">
+<div class="container-fluid slide-in-top" align="center">
 
     <div class="row" *ngIf="auth.currentUser.perfil == 'administrador'">
         <div class="col-12">
