--- a/src/app/pages/solicitarturnovdos/solicitarturnovdos.component.html
+++ b/src/app/pages/solicitarturnovdos/solicitarturnovdos.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container slide-in-top">
 
     <div class="row" *ngIf="auth.currentUser.perfil == 'administrador'">
         <div class="col-12">
