--- a/src/app/pages/usuarios/usuarios.component.html
+++ b/src/app/pages/usuarios/usuarios.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container-fluid slide-in-top">
     <div class="row m-4">
         <div class="col">
             <button type="button" class="btn btn-outline-primary" (click)="seleccionarTabla('administradores')" >Tabla de administradores</button>
@@ -30,7 +30,6 @@
     <div class="row m-4">
         <div class="col" align="center">
             <button class="bttn-float bttn-lg bttn-primary"(click)="btnAgregar()">Agregar Usuario Administrador</button>
-            <!-- <button class="btn btn-primary btn-block mb-4" (click)="btnAgregar()">Agregar Usuario Administrador</button> -->
         </div>
     </div>
     
