--- a/src/app/components/usuarios/tabla-pacientes/tabla-pacientes.component.css
+++ b/src/app/components/usuarios/tabla-pacientes/tabla-pacientes.component.css
@@ -30,3 +30,34 @@ td:nth-child(2n) {
     padding: 5px 5px 5px 5px;
     font-weight: 500
 }
+
+
+.float-cont{
+    /* position:fixed; */
+    display: flex;
+    gap: 15px;
+    margin: 15px;
+    /* bottom:40px; */
+    /* left:40px; */
+
+}
+
+.float-button{
+  position: relative;
+  width:60px;
+  height:60px;
+  box-shadow: 2px 4px 3px #999;
+  border: 0;
+  border-radius:50px;
+  overflow: hidden;
+}
+
+.float-button img{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+}
