--- a/src/app/pages/miperfil/miperfil.component.html
+++ b/src/app/pages/miperfil/miperfil.component.html
@@ -1,4 +1,4 @@
-<div class="container mt-5 roll-in-left" style="max-width: 520px;">
+<div class="container mt-5 slide-in-top	" style="max-width: 520px;">
 
     <div class="miContenedor p-3 mb-5" style="padding: 50px">
 
@@ -53,6 +53,29 @@
             </div>
         </div>
 
+        <div class="row" *ngIf="auth.currentUser.obrasocial" align="center">
+            <div class="col-md-12 d-grid gap-2 mb-3">
+                <button type="submit" class="bttn-pill bttn-md bttn-success" >Mis horarios</button>
+            </div>
+        </div>
+
+        <!-- <button (click)="cargarTurnos()">Cargar Turnos</button>
+        <button (click)="filtrarEspecialistas()" expand="block" fill="clear" shape="round">
+            filtrarEspecialistas
+        </button> -->
+
+        <div class="row">
+            <p>pepe</p>
+            <div class="float-cont" align="center" >
+                <div class="col" *ngFor='let item of especialistasEnteros; let i = index' >
+                    <div class="float-button" (click)="mostrarHC(item)">
+                        <img src={{item.data.imagen}} alt="">
+                    </div>
+                <h5 style="padding: 0; margin: 0;">{{item.data.nombre}} {{item.data.apellido}}</h5>
+                </div>
+            </div>
+        </div>
+
         <div *ngIf="auth.currentUser.especialidad" class="row" align="center">
             <div class="col-md-12 d-grid gap-2 mb-3">
                 <button type="submit" class="bttn-pill bttn-md bttn-success" (click)="mostrarHorarios()">Mis horarios</button>
@@ -96,6 +119,7 @@
         </div>
 
     </div>  
+
 
 
 </div>
