--- a/src/app/components/turnos/detallesturno/detallesturno.component.html
+++ b/src/app/components/turnos/detallesturno/detallesturno.component.html
@@ -1,31 +1,10 @@
 <div class="container">
 
-    <button type="button" (click)="filtrarPorTodo()" class="btn btn-primary">Abrir filtros</button>
-
-    <select (click)="seleccionaF()" class="form-select" id="pepe" aria-label="Default select example">
-        <option value={{item}} *ngFor="let item of objectKeys, let i = index" >{{item}}</option>
-    </select>
-
-    <select (click)="seleccionaTT()" id="mama" class="form-select" aria-label="Default select example">
-        <option *ngFor="let elemento of todosFiltros[jancarlos], let indice = index" value={{indice}} >{{elemento}}</option>
-    </select>
-
-    <!-- <div class="row"> 
-        <div class="col-3 m-3">
-            <h5>Filtrar por especialista: </h5>
-        </div>
-        <div class="col-3 m-3" *ngFor="let item of especialistasFiltrados">
-            <button type="button" (click)="filtrarPorEspecialista(item)" class="btn btn-primary">{{item}}</button>
+    <div class="row">
+        <div class="col m-3">
+            <input type="text" class="form-control" placeholder="Filtre por algun parametro" [(ngModel)]="parametro" (keyup)="superFiltro()" >
         </div>
     </div>
-    <div class="row">
-        <div class="col-3 m-3">
-            <h5>Filtrar por especialidad: </h5>
-        </div>
-        <div class="col-3 m-3" *ngFor="let item of especialidadesFiltradas">
-            <button type="button" (click)="filtrarPorEspecialidad(item)" class="btn btn-primary">{{item}}</button>
-        </div>
-    </div> -->
 
     <div class="row" >
         <div class="col">
@@ -55,10 +34,4 @@
             </table>
         </div>
     </div>
-    
-    <div class="row">
-        <button type="button" (click)="cargarTurnos()" class="btn btn-primary">Limpiar filtros</button>
-    </div>
 </div>
-
-<!-- <button (click)="cargarTurnos()">CargarTurnos</button> -->
