--- a/src/app/components/turnos/turnosespecialista/turnosespecialista.component.html
+++ b/src/app/components/turnos/turnosespecialista/turnosespecialista.component.html
@@ -1,43 +1,10 @@
 <div class="container">
 
-    <button type="button" (click)="filtrarPorTodo()" class="btn btn-primary">Abrir filtros</button>
-
-    <select (click)="seleccionaF()" class="form-select" id="pepe" aria-label="Default select example">
-        <option value={{item}} *ngFor="let item of objectKeys, let i = index" >{{item}}</option>
-    </select>
-
-    <select (click)="seleccionaTT()" id="mama" class="form-select" aria-label="Default select example">
-        <option *ngFor="let elemento of todosFiltros[jancarlos], let indice = index" value={{indice}} >{{elemento}}</option>
-    </select>
-
-    <input type="text" [(ngModel)]="searchParam" (keyup)="superFiltro()" >
-    <button (click)="superFiltro()">superfiltro</button>
-    
-    <!-- <div class="row">
-        <div class="row p-3" *ngFor="let item of objectKeys, let i = index">
-            <h5>{{item}} </h5>
-            <div class="col-3 p-3" *ngFor="let elemento of todosFiltros[item], let indice = index">
-                <button type="button" (click)="filtrarPorElemento(item, indice)" class="btn btn-primary">{{elemento}}</button>
-            </div>
-        </div>
-    </div> -->
-<!-- 
     <div class="row">
-        <div class="col-3 m-3">
-            <h5>Filtrar por paciente: </h5>
+        <div class="col m-3">
+            <input type="text" class="form-control" placeholder="Filtre por algun parametro" [(ngModel)]="parametro" (keyup)="superFiltro()" >
         </div>
-        <div class="col-3 m-3" *ngFor="let item of pacientesFiltrados">
-            <button type="button" (click)="filtrarPorPaciente(item)" class="btn btn-primary">{{item}}</button>
-        </div>
-    </div> -->
-    <!-- <div class="row">
-        <div class="col-3 m-3">
-            <h5>Filtrar por especialidad: </h5>
-        </div>
-        <div class="col-3 m-3" *ngFor="let item of especialidadesFiltradas">
-            <button type="button" (click)="filtrarPorEspecialidad(item)" class="btn btn-primary">{{item}}</button>
-        </div>
-    </div> -->
+    </div>
 
     <div class="row" >
         <div class="col">
@@ -68,8 +35,4 @@
         </div>
     </div>
 
-    <!-- <button (click)="completarHistoriaClinica()">FinalizarTurno</button> -->
-    <div class="row">
-        <button type="button" (click)="cargarTurnos()" class="btn btn-primary">Limpiar filtros</button>
-    </div>
 </div>
