agrego dos directivas

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -4,7 +4,7 @@
         <div class="col">
                                         <!-- TITULO Y FOTO -->
             <div class="row" align="center">
-                <h1 style="font-family: 'Bebas Neue';">INGRESO</h1>
+                <h1 appDtitulo style="font-family: 'Bebas Neue';">INGRESO</h1>
             </div>
 
             <div class="row ">
