agrego la tercer directiva

--- a/src/app/pages/miperfil/miperfil.component.html
+++ b/src/app/pages/miperfil/miperfil.component.html
@@ -9,8 +9,8 @@
 
         <div class="row" align="center">
             <div class="container " align="center" >
-                <img src={{auth.currentUser.imagen}} style="width: 50%; border-radius: 50%;" alt="">
-                <img *ngIf="auth.currentUser.imagen2" src={{auth.currentUser.imagen2}} style="width: 50%; border-radius: 50%;" alt="">
+                <img appMarco src={{auth.currentUser.imagen}} style="width: 50%; border-radius: 50%;" alt="">
+                <img appMarco *ngIf="auth.currentUser.imagen2" src={{auth.currentUser.imagen2}} style="width: 50%; border-radius: 50%;" alt="">
             </div>
         </div>
 
