--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -2,11 +2,11 @@
 
     <div class="row mb-4 mt-2" style="justify-content: center;" align="center">
         <div class="col">
-            <img src="../../../assets/paciente22.jpg" (click)="cambiarValor('paciente')" style="width: 100px; height: 100px; border-radius: 10%;" alt="paciente" title="paciente">
+            <img appMarco src="../../../assets/paciente22.jpg" (click)="cambiarValor('paciente')" style="width: 100px; height: 100px; border-radius: 10%;" alt="paciente" title="paciente">
         </div>
         
         <div class="col">
-            <img src="../../../assets/medicoclinica.jpg" (click)="cambiarValor('especialista')"  style="width: 100px; height: 100px; border-radius: 10%;" alt="especialista" title="especialista">
+            <img appMarco src="../../../assets/medicoclinica.jpg" (click)="cambiarValor('especialista')"  style="width: 100px; height: 100px; border-radius: 10%;" alt="especialista" title="especialista">
         </div>
     </div>
 
